# Mantel

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: game.cpp  game.hpp  input.cpp  input.hpp  window.cpp  window.h  window.hpp
src/gfx/: drawable_object.hpp  image.cpp  image.hpp  text.cpp  text.hpp  texture.cpp
src/gfx/ui/: button.cpp  button.hpp  panel.hpp
src/utils/: rotation.cpp  rotation.hpp  transform.hpp  vector.hpp
